turmites.lessons.turmites.langtoncolors.LangtonColors.scala.error
LangtonsAnt:3: error: value length is not a member of object Array
	for (i<-0 to Array.length-1)
                           ^